Fix Complete state Procesos de seleccion

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-descripcion-del-proceso-de-seleccion/form-descripcion-del-proceso-de-seleccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/form-descripcion-del-proceso-de-seleccion/form-descripcion-del-proceso-de-seleccion.component.html
@@ -923,7 +923,7 @@
                   <mat-form-field class="select-width">
                     <mat-select formControlName="responsableEquipoTecnico" required>
                       <mat-option *ngFor="let responsable of listaResponsablesTecnico" [value]="responsable">
-                        {{ responsable.nombre }} {{ responsable.nombre }}
+                        {{ responsable.nombre }}  
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
@@ -966,7 +966,7 @@
                   <mat-form-field class="select-width">
                     <mat-select formControlName="responsableEquipoestructurado" required>
                       <mat-option *ngFor="let responsable of listaResponsablesEstructurador" [value]="responsable">
-                        {{ responsable.nombre }} {{ responsable.nombre }}
+                        {{ responsable.nombre }} 
                       </mat-option>
                     </mat-select>
                   </mat-form-field>
