--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -108,12 +108,12 @@
       <p>
         <strong>Tipo de identificación:</strong>
         <span>
-          {{ contrato?.contratacion?.contratista?.tipoIdentificacionNotMapped }}
+          {{ contrato?.tipoIdentificacion }}
         </span>
       </p>
       <p>
         <strong>Número de identificación</strong>
-        {{ contrato?.tipoIdentificacion }}
+        {{ contrato?.numeroIdentificacion }}
       </p>
       <!-- <p>
         <strong>Tipo de intervención:</strong>
