fix validate registrar novedad
datosContratoProyectoModificadosXNovedad se valida este campo del contrato

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -239,7 +239,7 @@
     [fechaSolicitudNovedad]="addressForm.get('fechaSolicitudNovedad').value"
     [fechaFinSuspensionVal]="fechaFinSuspensionVal"
     [contrato]="contrato"
-    [datosContratoProyectoModificadosXNovedad]="contrato?.datosContratoProyectoModificadosXNovedad[0]"
+    [datosContratoProyectoModificadosXNovedad]="contrato?.datosContratoProyectoModificadosXNovedad ? contrato?.datosContratoProyectoModificadosXNovedad[0] : undefined"
     (guardar)="onSubmit()"
   >
   </app-accordion-novedades>
