--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/tabla-proyectos-tecnico/tabla-proyectos-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/tabla-proyectos-tecnico/tabla-proyectos-tecnico.component.html
@@ -17,6 +17,11 @@
       <td mat-cell *matCellDef="let element"> <b>{{ element.fecha }}</b> </td>
     </ng-container>
 
+    <ng-container matColumnDef="llaveMen">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 10%;"> Llave men </th>
+      <td mat-cell *matCellDef="let element"> <b>{{ element.llaveMen }}</b> </td>
+    </ng-container>
+
     <ng-container matColumnDef="departamento">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Departamento </th>
       <td mat-cell *matCellDef="let element"> {{ element.departamento }} </td>
@@ -56,7 +61,7 @@
       <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Gestión </th>
       <td mat-cell *matCellDef="let gestion">
         <button mat-raised-button color="accent" class="btn-table m05_important" type="button"
-          (click)="ver(gestion.id, gestion.estado!='COMPLETO')" *ngIf="gestion.estado!='COMPLETO' || gestion.proyectoDisponible == true">Ver detalle /<br>Editar</button>
+          (click)="ver(gestion.id, gestion.estado !='COMPLETO')" *ngIf="gestion.estado!='COMPLETO' || gestion.proyectoDisponible == true">Ver detalle /<br>Editar</button>
           <button mat-raised-button color="accent" class="btn-table m05_important" type="button"
           (click)="ver(gestion.id, gestion.estado=='COMPLETO')" *ngIf="gestion.estado=='COMPLETO' && !gestion.proyectoDisponible">Ver detalle</button>
         <button mat-raised-button color="accent" class="btn-table m05_important" type="button"
