--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/entrega/entrega.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/entrega/entrega.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <h1 class="title-menu--h1">
-      Entrega {{ dataEntrega?.infoProyecto?.llaveMen }}
+      Entrega {{ dataEntrega?.llaveMen }}
     </h1>
   </div>
 
@@ -16,19 +16,19 @@
         <strong>
           Institución Educativa:
         </strong>
-        {{ dataEntrega?.infoProyecto?.institucionEducativa }}
+        {{ dataEntrega?.institucionEducativa }}
       </p>
       <p>
         <strong>
           Sede:
         </strong>
-        {{ dataEntrega?.infoProyecto?.sede }}
+        {{ dataEntrega?.sede }}
       </p>
       <p>
         <strong>
           Tipo de intervención:
         </strong>
-        {{ dataEntrega?.infoProyecto?.tipoIntervencion }}
+        {{ dataEntrega?.tipoIntervencion }}
       </p>
     </mat-card-content>
   </mat-card>
@@ -39,25 +39,25 @@
         <strong>
           Fecha del recorrido de obra:
         </strong>
-        {{ dataEntrega?.infoProyecto?.fechaRecorridoObra }}
+        {{ dataEntrega?.fechaRecorridoObra | date: 'dd/MM/yyyy' }} 
       </p>
       <p>
         <strong>
           Fecha de firma del Acta de entrega física:
         </strong>
-        {{ dataEntrega?.infoProyecto?.fechaActa }}
+        {{ dataEntrega?.fechaFirmaActaEntregaFisica | date: 'dd/MM/yyyy' }}
       </p>
       <p>
         <strong>
           Número de radicado de la entrega:
         </strong>
-        {{ dataEntrega?.infoProyecto?.numeroRadicado }}
+        {{ dataEntrega?.numeroRadicadoEntrega }}
       </p>
       <p>
         <strong>
           Fecha de firma acta de entrega de bienes y servicios:
         </strong>
-        {{ dataEntrega?.infoProyecto?.fechaFirmaBienes }}
+        {{ dataEntrega?.fechaFirmaActaEntregaBienesServicios | date: 'dd/MM/yyyy' }} 
       </p>
     </mat-card-content>
   </mat-card>
