--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
@@ -413,7 +413,7 @@
                                     class="btn-guardar"
                                     type="button"
                                     (click)="onSubmit( i )"
-                                    [disabled]="getCriterios( i ).dirty === false">
+                                    [disabled]="!getCriterios( i ).dirty && !addressForm.touched">
                                     <img src="assets/img/icon/guardar.svg" alt="Guardar">
                             </button>
                         </div>
