--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalle-actuacion-notai/ver-detalle-actuacion-notai.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalle-actuacion-notai/ver-detalle-actuacion-notai.component.html
@@ -32,7 +32,7 @@
                 <p><b>¿Está actuación requiere la participación o insumo del supervisor del contrato?:</b> {{this.requiereSupervisor}}</p>
                 <p><b>¿Está actuación requiere la participación o insumo de la fiduciaria?:</b> {{ this.requiereFiduciaria}}</p>
                 <p><b>¿Está actuación requiere comité técnico?:</b> {{ this.requiereComite}}</p>
-                <p><b>Observaciones:</b></p>
+                <p><b>Observaciones: ss</b></p>
                 <div [innerHtml]="this.observaciones"></div> 
                 <p><strong>¿El proceso requiere mesas de trabajo?:</strong> {{this.requiereMT}}</p>
                 <p><strong>¿El proceso tiene resultado definitivo y se considera cerrado el proceso?:</strong> {{ this.procesoResultadoYDefinitivo}}</p>
